--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/gsap": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-svelte": "^2.9.0",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "svelte": "^3.54.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
